# maschina

./: .actrc  .dockerignore  .env.example  .env.local.example  .gitignore  .lintstagedrc.json  .lintstagedrc.mjs  .npmrc  .releaserc.json  .secrets.example  CHANGELOG.md  Cargo.toml  Makefile  README.md  SETUP.md  ascii-logo.txt  biome.json  commitlint.config.js  dc  dev.sh  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  renovate.json  rust-toolchain.toml  tsconfig.json  tui-logo.txt  turbo.json  vitest.config.ts  vitest.workspace.ts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/hooks/: pre-push
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml  preview.yml.disabled  release.yml  secrets-scan.yml  semantic-release.yml  stale.yml
apps/admin/: .env.example  index.html  package.json  tsconfig.app.json
apps/admin/src/: main.tsx  routeTree.gen.ts
apps/app/: index.html  package.json  vite.config.ts
apps/app/src/: main.tsx  routeTree.gen.ts
apps/auth/: index.html  package.json  vite.config.ts
apps/auth/src/: index.css  main.tsx  routeTree.gen.ts
apps/console/: index.html  package.json
apps/console/src/: routeTree.gen.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/developers/: index.html  package.json
apps/developers/src/: index.css  routeTree.gen.ts
apps/docs/: changelog.mdx  concepts.mdx  contributing.mdx  custom.css  index.html  install.mdx  introduction.mdx  llms.txt  mint.json  package.json  techstack.md  tsconfig.app.json  vite.config.ts
apps/docs/api-reference/: agents.mdx  authentication.mdx  keys.mdx  runs.mdx  search.mdx  webhooks.mdx
apps/docs/architecture/: ai.md  api.md  data.md  infrastructure.md  network.md  repository.md  services.md  workflows.md
apps/docs/development/: contributing.md  local.md  standards.md  testing.md
apps/docs/guides/: cli.mdx  search.mdx  troubleshooting.mdx
apps/docs/operations/: ci-cd.md  deployment.md  disaster-recovery.md
apps/docs/platform/: economics.mdx  network.mdx  overview.mdx
apps/docs/public/: robots.txt
apps/web/: .env.example  components.json  index.html  package.json  vite.config.ts
assets/: mach-token-metadata.json
content/docs/: mint.json  quickstart.mdx
docker/: .env.example  docker-compose.dev.yml  docker-compose.services.yml  docker-compose.yml
docker/agent-sandbox/: Dockerfile  entrypoint.py
docker/nats/: nats.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docs/architecture/: api.md  infrastructure.md  network.md  repository.md  services.md  system.md  techstack.md
docs/development/: contributing.md  environment.md  local.md  standards.md  testing.md
docs/operations/: ci-cd.md  deployment.md  observability.md  scaling.md
docs/security/: access.md  api.md
install/: install.sh
programs/: Anchor.toml  Cargo.toml
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/settlement/: Cargo.toml
programs/settlement/src/: errors.rs  lib.rs  state.rs
programs/settlement/src/instructions/: add_earnings.rs  anchor_receipt.rs  deposit_stake.rs  init_node_vault.rs  initialize_config.rs  mod.rs  register_node.rs  settle_earnings.rs  slash_stake.rs  withdraw_stake.rs
programs/treasury/: Cargo.toml
programs/treasury/src/: lib.rs
scripts/: backup.sh  discord-scaffold.mjs  gen-nats-certs.sh  generate-vapid-keys.mjs  health-check.sh  install.sh  node-setup.sh  setup-devnet.ts  setup-mach-token.ts  setup-realms.ts  sync-versions.sh  test-settlement-e2e.ts  update-token-uri.ts  update.sh  upload-arweave.ts  webhook.py
scripts/systemd/: maschina-mcp.service  maschina-node@.service  maschina-update.service  maschina-update.timer  maschina-webhook.service
services/analytics/: package.json
services/api/: .env.example  Dockerfile  fly.toml  package.json
services/daemon/: .env.example  Cargo.toml  Dockerfile  fly.toml  package.json
services/daemon/src/: chain.rs  config.rs  db.rs  error.rs  main.rs  receipt.rs  state.rs  watchdog.rs
services/daemon/src/orchestrator/: analyze.rs  evaluate.rs  execute.rs  mod.rs  scan.rs  scan_compat.rs
services/daemon/src/runtime/: mod.rs
services/daemon/src/scheduler/: mod.rs
services/daemon/src/server/: mod.rs
services/email/: package.json
services/gateway/: .env.example  Cargo.toml  Dockerfile  fly.toml  package.json
services/gateway/src/: auth.rs  config.rs  error.rs  main.rs  middleware.rs  proxy.rs  routes.rs  state.rs
services/mcp/: server.py
services/node/: Cargo.toml
services/node/src/: api.rs  config.rs  executor.rs  heartbeat.rs  identity.rs  main.rs
services/realtime/: .env.example  Cargo.toml  Dockerfile  fly.toml  package.json
services/realtime/src/: auth.rs  config.rs  handlers.rs  main.rs  nats.rs  registry.rs  state.rs
services/runtime/: .env.example  Dockerfile  fly.toml  pyproject.toml
services/runtime/src/: config.py  fallback.py  main.py  memory.py  models.py  ollama_runner.py  openai_runner.py  runner.py  sandbox.py  skills.py  streaming.py  tracing.py
services/runtime/tests/: test_runner_routing.py
services/worker/: Dockerfile  package.json  pyproject.toml
services/worker/src/worker/: __init__.py  config.py  consumer.py  main.py  models.py
services/worker/src/worker/handlers/: __init__.py  batch.py  ml.py  report.py  webhook.py  workflow.py
services/worker/src/worker/workflows/: __init__.py  activities.py  agent_workflow.py  temporal_worker.py
services/worker/tests/: test_worker.py
tests/: package.json  tsconfig.json  vitest.config.ts
tests/e2e/: smoke.spec.ts
tests/integration/: auth_flow.test.ts  chaos.test.ts  security.test.ts
tests/load/: agents.k6.js  auth.k6.js  health.k6.js
(+256 files in other folders)
