[package]
name = "settlement"
version = "0.1.0"
description = "Maschina on-chain execution receipt anchoring and earnings settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = { version = "0.30", features = ["token", "associated_token"] }
