[package]
name = "treasury"
version = "0.1.0"
description = "Maschina on-chain treasury and profit-share program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
