[package]
name = "maschina-daemon"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "maschina-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database (PostgreSQL async)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP (health server + calls to Python runtime)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Config + env
dotenvy = "0.15"

# Identity + crypto
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# NATS JetStream (job queue)
async-nats = "0.38"
futures = "0.3"

# Scheduling (nightly reconciliation cron)
tokio-cron-scheduler = "0.13"

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }
