[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maschina-runtime-service"
version = "0.0.0"
description = "Maschina agent execution runtime service (FastAPI)"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "openai>=1.50",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
