[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maschina-worker"
version = "0.0.0"
requires-python = ">=3.12"
# Async NATS JetStream consumer — handles background jobs that don't fit
# the synchronous request/response model of services/runtime.
# Subjects: maschina.jobs.worker.ml_inference, .report, .batch
dependencies = [
  "maschina-runtime",
  "maschina-agents",
  "maschina-risk",
  "maschina-ml",
  "nats-py[nkeys]>=2.9",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "httpx>=0.28",
  "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
]

[project.scripts]
maschina-worker = "worker.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
